# findnear

./: .gitignore  CMakeLists.txt  README
src/: flags.h  main.cpp  spread.h  stupid_dir.cpp  stupid_dir.h
